<resources>
    <string name="app_name">Solamo</string>
    <string name="start_order">Start Order</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="order">Orders</string>
    <string name="good_morning">Good Morning</string>
    <string name="our_offer">Our Offer</string>
    <string name="welcome">Welcome</string>

    <string name="item">Item</string>
    <string name="process">Process</string>
    <string name="total_harga">Total Harga</string>
    <string name="name">Name</string>
    <string name="your_name">your name</string>
    <string name="table_number">Table number</string>
    <string name="buy">Buy</string>
    <string name="cart">Cart</string>
    <string name="input_your_name_and_your_table_number">Input Your Name and Your Table Number</string>
    <string name="jumlah_item">Jumlah Item</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_0">0</string>
    <string name="harga_item">Harga Item</string>
    <string name="nama_item">Nama Item</string>
</resources>
