<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <GridLayout
        android:id="@+id/grid_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:columnCount="2">

        <TextView
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/gbold"
            android:text="@string/item"
            android:textColor="@color/colorBlack"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_close_black_24dp" />

    </GridLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_cartSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/linearbottom"
        android:layout_below="@id/grid_tittle">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/linearbottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/bg_corner"
            android:columnCount="2"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:fontFamily="@font/gmedium"
                android:text="@string/total_harga"
                android:textSize="18sp" />

            <TextView
                android:gravity="end"
                android:id="@+id/tv_totalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:fontFamily="@font/gbold"
                android:text="@string/total_harga"
                android:textSize="18sp" />
        </GridLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/bg_purple_cart"
            android:fontFamily="@font/gbold"
            android:padding="15dp"
            android:text="@string/process"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

    </LinearLayout>

</RelativeLayout>