<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbartop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_home"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:src="@drawable/solaria" />

            <ImageButton
                android:id="@+id/btn_menu"
                android:layout_width="50dp"
                android:layout_marginEnd="15dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_black_24dp"
                android:layout_gravity="end"
                android:background="?attr/selectableItemBackgroundBorderless"/>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbartop">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:layout_scrollFlags="scroll|enterAlways">

                <TextView
                    android:id="@+id/tv_greeting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/gbold"
                    android:text="@string/good_morning"
                    android:textColor="@color/colorBlack"
                    android:textSize="25sp" />

                <ImageView
                    android:id="@+id/img_greeting"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/tea"
                    android:cropToPadding="true"
                    android:padding="11dp"/>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gmedium"
                    android:paddingStart="15dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="5dp"
                    android:text="@string/our_offer"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp" />

                <android.support.v7.widget.RecyclerView
                    android:padding="10dp"
                    android:id="@+id/rv_offer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/btn_purple_corner"
        android:fontFamily="@font/gbold"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/start_order"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/ln_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/bg_purple_cart"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_shopping_cart_black_24dp"
            android:drawablePadding="10dp"
            android:drawableTint="@color/colorWhite"
            android:text="@string/jumlah_item"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_cartCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:paddingEnd="20dp"
            android:text="@string/_1"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>